<resources>
    <string name="app_name">Bibliotek</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Buku</string>
    <string name="menu_slideshow">Pengumuman</string>

    <string name="beranda">Beranda</string>
    <string name="buku">Buku</string>
    <string name="pengumuman">Pengumuman</string>

    <string name="hapus">Hapus</string>
    <string name="edit">Edit</string>

    <string name="judul_pengumuman">Judul Pengumuman</string>
    <string name="deskripsi_pengumuman">Deskripsi Pengumuman</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>

    <string name="judul_buku">Judul Buku</string>
    <string name="pengarang">Pengarang</string>

    <string name="submit">SUBMIT</string>
    <string name="kembali">KEMBALI</string>

    <string name="splashscreen">Splash Screen</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYXJraW40NiIsImEiOiJja2ZvdXg5cm8wM21lMnltcjBsNmJoZWlzIn0.weFn8aEc4H8wQYcWq04ekQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="hi_splash">Hi, kamu</string>
    <string name="dapatkan_navigasi">Dapatkan Navigasi</string>
    <string name="start_navigation">Start navigation</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="profil">PROFIL</string>
    <string name="email">Email</string>
    <string name="judulPengumumanBeranda">Pengumuman 1</string>
    <string name="pengumuman_jadwal_test_skb">Pengumuman jadwal test SKB</string>
    <string name="update">UPDATE</string>
</resources>