<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_tambah"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="90dp">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profil"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfil"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/ambilGambar"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ambil_gambar"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/emailProfil"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/email"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profil_nama_layout"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:boxStrokeColor="#000"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <EditText
                    android:id="@+id/nama_profil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ADF4F4F4"
                    android:hint="@string/nama_lengkap"
                    android:inputType="text"
                    android:textSize="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profileUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/coklatRegis"
                android:text="@string/update" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profileBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#E85D5D"
                android:text="@string/kembali" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>