<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/reg_frag"
    tools:context=".ui.LoginRegister.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backboxregister"
            android:layout_width="350dp"
            android:layout_height="450dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginVertical="60dp"
            android:background="@drawable/background_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/register"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012" />

            <View
                android:id="@+id/garisRegister"
                android:layout_width="180dp"
                android:layout_height="2dp"
                android:background="#575555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                app:boxStrokeColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/garisRegister"
                app:startIconDrawable="@drawable/ic_baseline_mail_24">

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ADF4F4F4"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ADF4F4F4"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nama_layout"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout"
                app:startIconDrawable="@drawable/ic_baseline_contacts_24">

                <EditText
                    android:id="@+id/nama_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ADF4F4F4"
                    android:hint="@string/nama_lengkap"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:backgroundTint="#F4F4f4"
                android:text="@string/submit"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@+id/nama_layout"
                app:layout_constraintTop_toTopOf="@+id/btn_back" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:backgroundTint="#E85D5D"
                android:text="@string/kembali"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/nama_layout"
                app:layout_constraintTop_toBottomOf="@+id/nama_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
