<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.home.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beranda"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <View
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:background="#575555"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/item_adapter"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="147dp"
                        android:id="@+id/buku1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/item_adapter"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="147dp"
                        android:id="@+id/buku2"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/item_adapter"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/judulPengumumanBeranda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/judulPengumumanBeranda"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/isiPengumumanBeranda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/pengumuman_jadwal_test_skb"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:textAlignment="center"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNavigasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/coklatDrawerBawah"
                android:textColor="@android:color/white"
                android:text="@string/dapatkan_navigasi"
                android:layout_marginTop="50dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>